[project]
name = "mobilize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "yarl>=1.9,<2",
    "aiogram>=3.4,<4",
    "python-dotenv>=1.0,<2",
    "langchain>=0.3,<0.4",
    "langchain-ollama>=0.2,<0.3",
    "geopy>=2.4,<3",
    "ddgs>=9,<10",
    "atproto>=0.0.65,<1",
]
